add: Create example test x2